Tue May 12 12:56:40 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Add support for %f in command passed
	  to --filter to allow specifying commands where the input file is
	  not the final argument.  Fixed #570, reported by "catkin".

Tue May 12 11:17:20 GMT 2015  Olly Betts <olly@survex.com>

	* diritor.h,omindex.cc,values.h: Add -track-ctime option to allow
	  omindex to pick up changes to file ownership and permissions.

Tue May 12 07:38:45 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo.

Mon May 11 07:05:24 GMT 2015  Olly Betts <olly@survex.com>

	* cdb_hash.cc,md5.cc: Remove 'register' as it's deprecated, and
	  likely to just be ignored by any modern compiler anyway.

Tue May 05 12:25:20 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: $prettyurl undoes %-encoding of UTF-8 in 1.2.21
	  and later too.

Tue May 05 01:40:17 GMT 2015  Olly Betts <olly@survex.com>

	* omega.cc: Drop compilation date and time from output - they prevent
	  reproducible builds and the version number is sufficient
	  information.

Fri May 01 09:36:27 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,md5.h,values.h: Now we require C++11, just include
	  <cstdint> for uint32_t.

Fri May 01 09:02:34 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: For Sun's C++ compiler, -std=c++11 enables C++11
	  support, and is incompatible with -library=stlport, so remove code
	  to enable that later option.

Fri May 01 08:35:47 GMT 2015  Olly Betts <olly@survex.com>

	* commonhelp.cc,omega.cc,omindex-list.cc,omindex.cc,scriptindex.cc:
	  Add spaces between literal strings and macros which expand to
	  literal strings for C++11 compatibility.

Fri May 01 06:27:13 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,m4/ax_cxx_compile_stdcxx_11.m4: Sync with xapian-core,
	  enabling C++11.

Fri May 01 01:38:08 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.
